// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15hrxne-StyledRow {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 .e1oi9aa76 {
  fill: #e5dbfd;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 {
  fill: #b3144d;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffd3e3;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .e1oi9aa73 {
  cursor: not-allowed;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .e1oi9aa74 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .e1oi9aa74 .e1oi9aa76 {
  fill: #f3f3f4;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1muk44o-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1muk44o-RadioInput+.e1oi9aa74 .e1oi9aa75 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1muk44o-RadioInput:checked+svg .e1oi9aa75 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1muk44o-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1oi9aa74 {
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 .e1oi9aa76 {
  fill: #f1eefc;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:focus-visible+.e1oi9aa74 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffebf2;
}

.cache-965flr-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-965flr-Ring .e1oi9aa76 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet e1l2kdu81"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            test  
          </legend>
          <div
            class="cache-15hrxne-StyledRow eagug70"
          >
            <div
              class="cache-1ls95ey-Stack-Container e1xh9nkw3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="radio"
            >
              <div
                class="cache-ymc80m-Stack efjor120"
              >
                <div
                  aria-disabled="false"
                  class="e1xh9nkw4 cache-14vtc2t-RadioContainer-StyledRadio-StyledElement e1oi9aa72"
                  data-checked="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="cache-1muk44o-RadioInput e1oi9aa73"
                    id="test-radio 1"
                    name="test"
                    type="radio"
                    value="radio 1"
                  />
                  <svg
                    class="cache-965flr-Ring e1oi9aa74"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="cache-ivayk3-RadioMark e1oi9aa75"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="cache-shj57p-StyledLabel e1oi9aa71"
                    for="test-radio 1"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
            </div>
            <div
              class="cache-1ls95ey-Stack-Container e1xh9nkw3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="radio"
            >
              <div
                class="cache-ymc80m-Stack efjor120"
              >
                <div
                  aria-disabled="false"
                  class="e1xh9nkw4 cache-14vtc2t-RadioContainer-StyledRadio-StyledElement e1oi9aa72"
                  data-checked="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="cache-1muk44o-RadioInput e1oi9aa73"
                    id="test-radio 2"
                    name="test"
                    type="radio"
                    value="radio 2"
                  />
                  <svg
                    class="cache-965flr-Ring e1oi9aa74"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="cache-ivayk3-RadioMark e1oi9aa75"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="cache-shj57p-StyledLabel e1oi9aa71"
                    for="test-radio 2"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15hrxne-StyledRow {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  pointer-events: none;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk3 {
  cursor: pointer;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[data-checked='true'] {
  color: #641cb3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[data-error='true'] {
  color: #b3144d;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox input+svg {
  display: none;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox label {
  width: 100%;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet e1l2kdu81"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            test  
          </legend>
          <div
            class="cache-15hrxne-StyledRow eagug70"
          >
            <div
              class="cache-1ls95ey-Stack-Container e1xh9nkw3"
              data-checked="true"
              data-disabled="false"
              data-has-label="true"
              data-testid="checked"
              data-type="checkbox"
            >
              <div
                aria-disabled="false"
                class="e1xh9nkw0 cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox e18zyixk1"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="cache-bd1zro-CheckboxInput e18zyixk2"
                  id=":rd:"
                  name="test"
                  type="checkbox"
                  value="checked"
                />
                <svg
                  class="cache-1acemqq-StyledIcon e18zyixk4"
                  fill="none"
                  size="24"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                      height="16"
                      rx="2px"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="cache-10ivylf-Stack efjor120"
                >
                  <div
                    class="cache-17l4vsh-Stack efjor120"
                  >
                    <label
                      class="cache-9k0c1e-StyledLabel e18zyixk3"
                      for=":rd:"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15hrxne-StyledRow {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73+.e1oi9aa74 .e1oi9aa76 {
  fill: #e5dbfd;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 {
  fill: #b3144d;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .e1oi9aa73[aria-invalid='true']+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffd3e3;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .e1oi9aa73 {
  cursor: not-allowed;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .e1oi9aa74 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .e1oi9aa74 .e1oi9aa76 {
  fill: #f3f3f4;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-14vtc2t-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1muk44o-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1muk44o-RadioInput+.e1oi9aa74 .e1oi9aa75 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1muk44o-RadioInput:checked+svg .e1oi9aa75 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1muk44o-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1oi9aa74 {
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.e1oi9aa74 {
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:active+.e1oi9aa74 .e1oi9aa76 {
  fill: #f1eefc;
}

.cache-1muk44o-RadioInput[aria-disabled='false']:focus-visible+.e1oi9aa74 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1muk44o-RadioInput[aria-invalid='true']:focus+.e1oi9aa74 .e1oi9aa76 {
  fill: #ffebf2;
}

.cache-965flr-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-965flr-Ring .e1oi9aa76 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet e1l2kdu81"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            test  
          </legend>
          <div
            class="cache-15hrxne-StyledRow eagug70"
          >
            <div
              class="cache-1ls95ey-Stack-Container e1xh9nkw3"
              data-checked="true"
              data-disabled="false"
              data-has-label="true"
              data-testid="checked"
              data-type="radio"
            >
              <div
                class="cache-ymc80m-Stack efjor120"
              >
                <div
                  aria-disabled="false"
                  class="e1xh9nkw4 cache-14vtc2t-RadioContainer-StyledRadio-StyledElement e1oi9aa72"
                  data-checked="true"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    checked=""
                    class="cache-1muk44o-RadioInput e1oi9aa73"
                    id="test-checked"
                    name="test"
                    type="radio"
                    value="checked"
                  />
                  <svg
                    class="cache-965flr-Ring e1oi9aa74"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="cache-1niv4ql-InnerCircleRing e1oi9aa76"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="cache-ivayk3-RadioMark e1oi9aa75"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="cache-shj57p-StyledLabel e1oi9aa71"
                    for="test-checked"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15hrxne-StyledRow {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 16px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1ls95ey-Stack-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-1ls95ey-Stack-Container[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-1ls95ey-Stack-Container[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1ls95ey-Stack-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-1ls95ey-Stack-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1ls95ey-Stack-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  pointer-events: none;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk3 {
  cursor: pointer;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[data-checked='true'] {
  color: #641cb3;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[data-error='true'] {
  color: #b3144d;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox input+svg {
  display: none;
}

.cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox label {
  width: 100%;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      class="cache-gw33n2-Stack efjor120"
    >
      <fieldset
        class="cache-103llo5-FieldSet e1l2kdu81"
      >
        <div
          class="cache-oey408-Stack efjor120"
        >
          <legend
            class="cache-zvclys-StyledText ewwvy070"
          >
            test  
          </legend>
          <div
            class="cache-15hrxne-StyledRow eagug70"
          >
            <div
              class="cache-1ls95ey-Stack-Container e1xh9nkw3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="checkbox"
            >
              <div
                aria-disabled="false"
                class="e1xh9nkw0 cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox e18zyixk1"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="cache-bd1zro-CheckboxInput e18zyixk2"
                  id=":rh:"
                  name="test"
                  type="checkbox"
                  value="radio 1"
                />
                <svg
                  class="cache-1acemqq-StyledIcon e18zyixk4"
                  fill="none"
                  size="24"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                      height="16"
                      rx="2px"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="cache-10ivylf-Stack efjor120"
                >
                  <div
                    class="cache-17l4vsh-Stack efjor120"
                  >
                    <label
                      class="cache-9k0c1e-StyledLabel e18zyixk3"
                      for=":rh:"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="cache-1ls95ey-Stack-Container e1xh9nkw3"
              data-checked="false"
              data-disabled="false"
              data-has-label="true"
              data-type="checkbox"
            >
              <div
                aria-disabled="false"
                class="e1xh9nkw0 cache-ogy60t-CheckboxContainer-OverloadedCheckbox-StyledElement-StyledCheckbox e18zyixk1"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="cache-bd1zro-CheckboxInput e18zyixk2"
                  id=":rk:"
                  name="test"
                  type="checkbox"
                  value="radio 2"
                />
                <svg
                  class="cache-1acemqq-StyledIcon e18zyixk4"
                  fill="none"
                  size="24"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="cache-1t9py5o-InnerCheckbox e18zyixk6"
                      height="16"
                      rx="2px"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="cache-10ivylf-Stack efjor120"
                >
                  <div
                    class="cache-17l4vsh-Stack efjor120"
                  >
                    <label
                      class="cache-9k0c1e-StyledLabel e18zyixk3"
                      for=":rk:"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </form>
</DocumentFragment>
`;
